--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -10,4 +10,12 @@
     <None Remove="InMemory\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
 </Project>
